[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/dices.png" type="Texture" id=1]
[ext_resource path="res://DeliveryGuys/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/base.tres" type="Theme" id=3]
[ext_resource path="res://assets/want to ride my bicycle.jpg" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="Control" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -75.0
margin_bottom = 110.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 88.0
custom_constants/separation = 15

[node name="DicesNotRolled" type="Label" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 23.0
theme = ExtResource( 3 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn1" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "1"

[node name="btn2" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 318.0
margin_right = 358.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "2"

[node name="btn3" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 376.0
margin_right = 416.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "3"

[node name="btn4" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 434.0
margin_right = 474.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "4"

[node name="btn5" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 492.0
margin_right = 532.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "5"

[node name="btn6" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 550.0
margin_right = 590.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "6"

[node name="btn7" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 608.0
margin_right = 648.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "7"

[node name="btn8" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 666.0
margin_right = 706.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "8"

[node name="btn9" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 724.0
margin_right = 764.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 3 )
text = "9"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 204.0

[node name="Confirm" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer"]
margin_left = 433.0
margin_right = 590.0
margin_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
disabled = true
text = "Confirm selection"

[node name="Clear" type="Button" parent="MarginContainer/Control/VBoxContainer/VBoxContainer"]
margin_left = 444.0
margin_top = 35.0
margin_right = 579.0
margin_bottom = 66.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
disabled = true
text = "Clear selection"

[node name="Control2" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/Control2"]
margin_left = 507.0
margin_top = 480.0
margin_right = 519.0
margin_bottom = 503.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -70.0
margin_right = 512.0
margin_bottom = -39.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roll" type="Button" parent="MarginContainer/Control2/HBoxContainer"]
margin_left = 491.0
margin_right = 532.0
margin_bottom = 31.0
theme = ExtResource( 3 )
text = "Roll"

[node name="Dice1" type="Sprite" parent="MarginContainer/Control2/HBoxContainer"]
position = Vector2( 470, -40 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="Dice2" type="Sprite" parent="MarginContainer/Control2/HBoxContainer"]
position = Vector2( 555, -40 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2

[node name="Control3" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
margin_top = 4.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
visible = false
margin_left = 56.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
text = "Try again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer2"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="Texture" type="TextureRect" parent="MarginContainer2/Control"]
margin_left = 440.0
margin_top = 105.0
margin_right = 580.0
margin_bottom = 230.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Control"]
anchor_right = 1.0
margin_top = 23.0
margin_bottom = 193.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="MarginContainer2/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 75.0
theme = ExtResource( 3 )
text = "You cannot eliminate anymore numbers, the game is over

Packages delivered: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="MarginContainer/Control2/HBoxContainer/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
